libs added: jquery and fabric

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>FallingDown</title>
+    <script src="libs/fabric.min.js"></script>
+    <script src="libs/jquery-3.4.1.min.js"></script>
 </head>
 <body>
 
