--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>FallingDown</title>
     <script src="libs/fabric.min.js"></script>
     <script src="libs/jquery-3.4.1.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
 
