--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>FallingDown</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="libs/fabric.min.js"></script>
     <script src="libs/jquery-3.4.1.min.js"></script>
     <script src="js/main.js"></script>
@@ -12,7 +13,7 @@
 <div id="startBtn"> <p> DOWN! </p> </div>
 
 <div class="canvas-wrapper">
-	<canvas id="FallField" width="720" height="480"></canvas>	
+	<canvas id="FallField" width="1280" height="524"></canvas>	
 </div>
 
 
