--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 
-<div id="startBtn"> <p> DOWN! </p> </div>
+<div id="startBtn" class="startBtn"> <p> DOWN! </p> </div>
 
 <div class="canvas-wrapper">
-	<canvas id="FallField" width="1280" height="524"></canvas>	
+    <canvas id="FallField" width="1280" height="524"></canvas>
 </div>
 
 
