TIP after animation complete added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <div id="startBtn" class="startBtn"> <p> DOWN! </p> </div>
 
+<div id="tip"> <p> </p> </div>
+
 <div class="canvas-wrapper">
     <canvas id="FallField" width="1280" height="524"></canvas>
 </div>
